# Jobbot-Application-Database-Bot

./: .env.example  .gitignore  FORMATTING_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SLACK_BOT_GUIDE.md  SLACK_SETUP.md  STATUS.md  SUMMARY.md  add_job.py  ashby_test_results_20250909_162323.json  bot_watchdog.py  check_config.py  com.jobbot.keeper.plist  com.jobbot.slackbot.plist  diagnose_slack.py  keep_bot_running.py  linkedin_job_output_20250903_224119.json  manage_bot.sh  manage_bulletproof_bot.sh  monitor_bot.sh  pyproject.toml  requirements.txt  run_slack_bot.py  setup.py  simple_bot_manager.sh  slack_bot_async_safe.py  slack_bot_bulletproof.py  slack_bot_simple.py  slack_bot_simple_working.py  slack_bot_working.py  start_bulletproof_bot.py  start_slack_bot.py  start_slack_bot_final.py  start_slack_bot_fixed.py  start_working_bot.py
scripts/: check_env.py  getting_started.py
src/enhanced_jobbot/: __init__.py  enhanced_jobbot.py  job_formatter.py  jobbot.py  jobbot_cli.py  slack_bot.py  slack_bot_fixed.py
